--- a/index.html
+++ b/index.html
@@ -11,12 +11,15 @@
 	<header>
 		<div class="container">
 			<div class="header clearfix">
-				<div class="logo">
-					<a href="#logo" class="logo__link clearfix"></a>
-				</div>
-				<div class="logo__text">
-					<h1 class="logo__header">theyalow <sub class="logo__indx">craft by css author.com</sub></h1>
-				</div>
+				<div class="clearfix">
+					<div class="logo">
+						<div class="logo-img">
+							<a href="#logo" class="logo__link clearfix"></a>
+						</div>
+						<div class="logo__text">
+							<h1 class="logo__header">theyalow <sub class="logo__indx">craft by css author.com</sub></h1>
+						</div>
+					</div>
 				<div class="header-menu clearfix">
 					<ul>
 						<li class="header-menu__item"><a class="header-menu__link" href="#aboutus"><div class="h-m__i--ab__img"></div>about us</a></li>
@@ -24,9 +27,12 @@
 						<li class="header-menu__item "><a class="header-menu__link clearfix" href="#contact"><div class="h-m__i--c__img clearfix"></div>contact</a></li>
 					</ul>
 				</div>
+			</div>
 				<div class="header-playerblock clearfix">
-					<div class="header-pl__player">
-							
+					<div class="header-pl__player"></div>
+					<div class="header-pl__text">
+						<p class="header-pl__words">the cool</p>
+						<p class="header-pl__words header-pl__words--white">the minimal</p>
 					</div>
 				</div>
 			</div>
