--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<link rel="stylesheet" type="text/css" href="./styles/reset.css">
 	<link rel="stylesheet" type="text/css" href="./styles/index.css">
+	<link rel="stylesheet" type="text/css" href="./styles/section--white.css">
+	<link rel="stylesheet" type="text/css" href="./styles/section--yellow.css">
 </head>
 <body>
 	<header>
@@ -38,6 +40,51 @@
 			</div>
 		</div>
 	</header>
+	<section>
+		<div class="container">
+			<div class="section--white">
+				<div class="s--w__img s--w__better-design">better design</div>
+				<div class="s--w__img s--w__customise">customise</div>
+				<div class="s--w__img s--w__its-free">its free</div>
+			</div>
+		</div>
+	</section>
+	<section>
+		<div class="container">
+			<div class="section--yellow clearfix">
+				<div class="s--y__header">
+					<h1 class="s--y__text">lorem ipsum dolor sit amet</h1>
+				</div>
+				<div class="s--y__blocks">
+					<div class="s--y__left">
+						<div class="left__text">
+							<p class="left__text--text">
+								Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ut ullamcorper neque. 
+								<div class="left__text--img"></div>
+							</p>
+						</div>
+						<div class="left__player">
+							<div class="left__player--play"></div>
+						</div>
+					</div>
+					<div class="s--y__right clearfix">
+						<div class="right__date clearfix">
+							<p class="right__date--text">
+								22
+							</p>
+						</div>
+						<div class="right__twitter"></div>
+						<div class="right__img"></div>
+					</div>
+				</div>
+				<div class="calendar clearfix">
+					<p class="calendar__date">25</p>
+					<p class="calendar__month">april</p>
+				</div>
+				<div class="scroll"></div>
+			</div>
+		</div>
+	</section>
 </body>
 </html>
 
