--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
 	<link rel="stylesheet" type="text/css" href="./styles/index.css">
 	<link rel="stylesheet" type="text/css" href="./styles/section--white.css">
 	<link rel="stylesheet" type="text/css" href="./styles/section--yellow.css">
+	<link rel="stylesheet" type="text/css" href="./styles/footer.css">
 </head>
 <body>
-	<header>
+	<header class="header-bg">
 		<div class="container">
 			<div class="header clearfix">
 				<div class="clearfix">
@@ -22,7 +23,7 @@
 							<h1 class="logo__header">theyalow <sub class="logo__indx">craft by css author.com</sub></h1>
 						</div>
 					</div>
-				<div class="header-menu clearfix">
+				<div class="header-menu">
 					<ul>
 						<li class="header-menu__item"><a class="header-menu__link" href="#aboutus"><div class="h-m__i--ab__img"></div>about us</a></li>
 						<li class="header-menu__item h-m__i--services"><a class="header-menu__link" href="#services"><div class="h-m__i--s__img clearfix"></div>services</a></li>
@@ -30,7 +31,7 @@
 					</ul>
 				</div>
 			</div>
-				<div class="header-playerblock clearfix">
+				<div class="header-playerblock">
 					<div class="header-pl__player"></div>
 					<div class="header-pl__text">
 						<p class="header-pl__words">the cool</p>
@@ -40,7 +41,7 @@
 			</div>
 		</div>
 	</header>
-	<section>
+	<section class="white-bg">
 		<div class="container">
 			<div class="section--white">
 				<div class="s--w__img s--w__better-design">better design</div>
@@ -49,9 +50,9 @@
 			</div>
 		</div>
 	</section>
-	<section>
+	<section class="yellow-bg">
 		<div class="container">
-			<div class="section--yellow clearfix">
+			<div class="section--yellow">
 				<div class="s--y__header">
 					<h1 class="s--y__text">lorem ipsum dolor sit amet</h1>
 				</div>
@@ -67,8 +68,8 @@
 							<div class="left__player--play"></div>
 						</div>
 					</div>
-					<div class="s--y__right clearfix">
-						<div class="right__date clearfix">
+					<div class="s--y__right">
+						<div class="right__date">
 							<p class="right__date--text">
 								22
 							</p>
@@ -77,7 +78,7 @@
 						<div class="right__img"></div>
 					</div>
 				</div>
-				<div class="calendar clearfix">
+				<div class="calendar">
 					<p class="calendar__date">25</p>
 					<p class="calendar__month">april</p>
 				</div>
@@ -85,6 +86,36 @@
 			</div>
 		</div>
 	</section>
+	<footer class="footer-bg">
+		<div class="container">
+			<div class="section--grey">
+				<div class="footer__header">
+					<h1 class="f__h--header">
+						Lorem ipsum dolor sit amet
+					</h1>
+				</div>
+				<div class="footer-content">
+					<div class="footer-images">
+						<div class="footer--laptop">
+							<div class="f--l--circle">
+								<div class="f--l--c__text">its 100% free</div>
+							</div>
+						</div>
+						<div class="footer--pad"></div>
+						<div class="footer--phone"></div>
+					</div>
+					<div class="footer-text">
+						<ul class="footer-list">
+							<li class="footer-text__item">Set art perspiciatis unde omnis</li>
+							<li class="footer-text__item">Lorem ipsum dolor sit amet, consectetur adipisicing</li>
+							<li class="footer-text__item">Set art perspiciatis unde omnis</li>
+							<li class="footer-text__item">Lorem ipsum dolor sit amet, consectetur adipisicing</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</div>
+	</footer>
 </body>
 </html>
 
@@ -92,4 +123,3 @@
 
 
 
-<!-- 169 228(224+4)-->
