--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 	</section>
 	<footer class="footer-bg">
 		<div class="container">
-			<div class="section--grey">
+			<div class="footer--grey">
 				<div class="footer__header">
 					<h1 class="f__h--header">
 						Lorem ipsum dolor sit amet
@@ -105,7 +105,7 @@
 						<div class="footer--phone"></div>
 					</div>
 					<div class="footer-text">
-						<ul class="footer-list">
+						<ul>
 							<li class="footer-text__item">Set art perspiciatis unde omnis</li>
 							<li class="footer-text__item">Lorem ipsum dolor sit amet, consectetur adipisicing</li>
 							<li class="footer-text__item">Set art perspiciatis unde omnis</li>
@@ -116,6 +116,21 @@
 			</div>
 		</div>
 	</footer>
+	<footer class="section--grey">
+		<div class="container">
+			<div class="copyright">
+				<div class="footer-logo">
+					<div class="f-l__img"></div>
+					<p class="f-l__text">theyalow</p>
+				</div>
+				<div>
+					<p class="copyright-text">
+						Designet by cssauthor.com
+					</p>
+				</div>			
+			</div>
+		</div>
+	</footer>	
 </body>
 </html>
 
