mobile v. zalupa kakayz-to (30.11)

--- a/index.html
+++ b/index.html
@@ -15,24 +15,26 @@
 		<div class="container">
 			<div class="header clearfix">
 				<div class="clearfix">
-					<div class="logo">
-						<div class="logo-img">
-							<a href="#logo" class="logo__link clearfix"></a>
+				 <div class="logo-and-menu">
+						<div class="logo clearfix">
+							<div class="logo-img">
+								<a href="#logo" class="logo__link clearfix"></a>
+							</div>
+							<div class="logo__text">
+								<h1 class="logo__header">theyalow <sub class="logo__indx">craft by css author.com</sub></h1>
+							</div>
 						</div>
-						<div class="logo__text">
-							<h1 class="logo__header">theyalow <sub class="logo__indx">craft by css author.com</sub></h1>
-						</div>
+					<div class="header-menu clearfix">
+						<ul>
+							<li class="header-menu__item"><a class="header-menu__link" href="#aboutus"><div class="h-m__i--ab__img"></div>about us</a></li>
+							<li class="header-menu__item h-m__i--services"><a class="header-menu__link" href="#services"><div class="h-m__i--s__img"></div>services</a></li>
+							<li class="header-menu__item"><a class="header-menu__link" href="#contact"><div class="h-m__i--c__img clearfix"></div>contact</a></li>
+						</ul>
 					</div>
-				<div class="header-menu">
-					<ul>
-						<li class="header-menu__item"><a class="header-menu__link" href="#aboutus"><div class="h-m__i--ab__img"></div>about us</a></li>
-						<li class="header-menu__item h-m__i--services"><a class="header-menu__link" href="#services"><div class="h-m__i--s__img clearfix"></div>services</a></li>
-						<li class="header-menu__item "><a class="header-menu__link clearfix" href="#contact"><div class="h-m__i--c__img clearfix"></div>contact</a></li>
-					</ul>
 				</div>
 			</div>
 				<div class="header-playerblock">
-					<div class="header-pl__player"></div>
+					<div class="header-pl__player"><img src="images/player2.png" alt="pl"></div>
 					<div class="header-pl__text">
 						<p class="header-pl__words">the cool</p>
 						<p class="header-pl__words header-pl__words--white">the minimal</p>
@@ -44,9 +46,9 @@
 	<section class="white-bg">
 		<div class="container">
 			<div class="section--white">
-				<div class="s--w__img s--w__better-design">better design</div>
-				<div class="s--w__img s--w__customise">customise</div>
-				<div class="s--w__img s--w__its-free">its free</div>
+				<div class="s--w__img s--w__better-design"><img src="images/cloud.png" alt="">better design</div>
+				<div class="s--w__img s--w__customise"><img src="images/listok.png" alt="">customise</div>
+				<div class="s--w__img s--w__its-free"><img src="images/fly.png" alt="">its free</div>
 			</div>
 		</div>
 	</section>
@@ -123,8 +125,8 @@
 					<div class="f-l__img"></div>
 					<p class="f-l__text">theyalow</p>
 				</div>
-				<div>
-					<p class="copyright-text">
+				<div class="copyright-text">
+					<p class="c-t__text">
 						Designet by cssauthor.com
 					</p>
 				</div>			
