fixed header, yellow section and images (players etc.)

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<div class="container">
 			<div class="header clearfix">
 				<div class="clearfix">
-				 <div class="logo-and-menu">
+					<div class="logo-and-menu">
 						<div class="logo clearfix">
 							<div class="logo-img">
 								<a href="#logo" class="logo__link clearfix"></a>
@@ -24,17 +24,21 @@
 								<h1 class="logo__header">theyalow <sub class="logo__indx">craft by css author.com</sub></h1>
 							</div>
 						</div>
-					<div class="header-menu clearfix">
-						<ul>
-							<li class="header-menu__item"><a class="header-menu__link" href="#aboutus"><div class="h-m__i--ab__img"></div>about us</a></li>
-							<li class="header-menu__item h-m__i--services"><a class="header-menu__link" href="#services"><div class="h-m__i--s__img"></div>services</a></li>
-							<li class="header-menu__item"><a class="header-menu__link" href="#contact"><div class="h-m__i--c__img clearfix"></div>contact</a></li>
+						<ul class="header-menu clearfix">
+							<li class="header-menu__item">
+								<a class="header-menu__link  header-menu__link--about" href="#aboutus">about us</a>
+							</li>
+							<li class="header-menu__item header-menu__item--services">
+								<a class="header-menu__link  header-menu__link--services" href="#services">services</a>
+							</li>
+							<li class="header-menu__item">
+								<a class="header-menu__link header-menu__link--contact" href="#contact">contact</a>
+							</li>
 						</ul>
 					</div>
 				</div>
-			</div>
 				<div class="header-playerblock">
-					<div class="header-pl__player"><img src="images/player2.png" alt="pl"></div>
+					<div class="header-pl__player"><img class="header-player__img" src="images/player2.png" alt="pl"></div>
 					<div class="header-pl__text">
 						<p class="header-pl__words">the cool</p>
 						<p class="header-pl__words header-pl__words--white">the minimal</p>
@@ -66,7 +70,8 @@
 								<div class="left__text--img"></div>
 							</p>
 						</div>
-						<div class="left__player">
+						<div class="left-player">
+							<img class="left__video" src="images/jorge.png" alt="jorge">
 							<div class="left__player--play"></div>
 						</div>
 					</div>
